--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,3 +33,73 @@ nav{
     margin-bottom: 50px;
 
 }
+.container{
+ 
+    position: relative;
+    margin-top: 10px;
+    width: 1000px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.container .card {
+    position: relative;
+
+}
+.container .card .face{
+    width: 300px;
+    height: 200px;
+}
+
+.container .card .face.face1{
+    position: relative;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    z-index: 1;
+    transform: translateY(100px);
+}
+.container .card:hover .face.face1{
+    transform: translateY(0);
+    box-shadow:
+    inset 0 0 60px whitesmoke,
+    inset 20px 0 80px rgba(255, 0, 0, 0.788),
+    inset -20px 0 80px rgb(242, 243, 243),
+  
+    
+    0 0 50px #fff,
+
+}
+.container .card .face.face1 .content{
+    opacity: .2;
+    transition: 0.5s;
+    text-align: center;
+}
+
+.container .card .face.face1 .content i{
+    font-size: 3em;
+    color: white;
+    display: inline-block;
+}
+.container .card .face.face1 .content h3{
+    font-size: 1em;
+    color: white;
+    text-align: center;
+
+}
+.container .card .face.face2{
+    position: relative;
+    background: whitesmoke;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 20px  50px rgba(0,0,0, 8);
+    transform: translateY(-100px);
+}
+.container .card:hover .face.face2{
+    transform:translateY(0)
+}
