--- a/css/estilos.css
+++ b/css/estilos.css
@@ -62,9 +62,9 @@ section h2{
    
 }
 #conocenos img{
- height: 450px;
+ height: 350px;
  padding: 20px;
- border-radius: 25px;
+ border-radius: 35px;
 }
 .conocenosTitulo{
     font-size: 45px;
@@ -170,27 +170,22 @@ section h2{
 /* FOOTER */
 
 #footer{
-    margin-top: 20px;
+    padding-bottom: 15px;
     background-color: white;
     box-shadow: 0px 0px 25px rgb(65, 1, 1);
-}
-.redes{
    
-    display: flex;
-    justify-content: space-evenly;
-    margin-bottom: 10px;
     
 }
+
 .redes a img{
-    width: 30px;
-    height: 30px;
-    margin-right: 5px;
+    width: 50px;
+    height: 50px;
+    margin-right: 5px;  
 }
 .redes a{
     margin-top: 20px;
     text-decoration: none;
-    color: black;
-    
+    color: black; 
 }
 #footer ul li{
     text-decoration: none;
@@ -204,11 +199,13 @@ section h2{
 
 /* LOGO WP */
 .logoWp{
+    
     position: fixed;
     line-height: 55px;
     bottom: 50px;
     right: 30px;
     z-index: 100;
+
 }
 
 @media (min-width: 320px) and (max-width: 480px){
@@ -226,6 +223,7 @@ section h2{
         padding: 20px;
         border-radius: 50px;
        }
+       
 }
 
 @media (min-width: 481px) and (max-width: 768px){
@@ -239,6 +237,7 @@ section h2{
         align-items: center;
         align-content: center;
     }
+    
 
 }
 @media (min-width: 769px) and (max-width: 1023px){
