--- a/css/estilos.css
+++ b/css/estilos.css
@@ -95,6 +95,7 @@ section h2{
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
+
 .container .card {
     
   position: relative;
@@ -172,27 +173,42 @@ section h2{
 #footer{
     padding-bottom: 15px;
     background-color: white;
-    box-shadow: 0px 0px 25px rgb(65, 1, 1);
-   
-    
+    box-shadow: 0px 0px 25px rgb(65, 1, 1);   
 }
-
-.redes a img{
-    width: 50px;
-    height: 50px;
-    margin-right: 5px;  
-}
-.redes a{
-    margin-top: 20px;
-    text-decoration: none;
-    color: black; 
+#footer p{
+    font-size: 20px;
 }
 #footer ul li{
     text-decoration: none;
     list-style: none;
 }
+.contact{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+.redes{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.redes a img{
+    width: 50px;
+    height: 50px;
+    
+}
+.redes a{
+    text-decoration: none;
+    color: black; 
+}
+
 .footerFinal{
    display: flex;
+   flex-direction: column;
    justify-content: center;
    align-items: center;
 }
@@ -203,7 +219,7 @@ section h2{
     position: fixed;
     line-height: 55px;
     bottom: 50px;
-    right: 30px;
+    right: 20px;
     z-index: 100;
 
 }
@@ -225,6 +241,12 @@ section h2{
         height: 300px;
         padding: 20px;
         border-radius: 50px;
+       }
+       #footer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
        }
        
 }
