--- a/css/estilos.css
+++ b/css/estilos.css
@@ -50,7 +50,12 @@ section h2{
     height: 300px; 
 }
 .card-group .card h5{
-    font-size: 20px;
+    font-size: 25px;
+}
+.card-footer{
+    border: none;
+    display: grid;
+    place-items: center;
 }
 
 
