--- a/css/estilos.css
+++ b/css/estilos.css
@@ -102,14 +102,13 @@ section h2{
 }
 
 .container .card {
-    
   position: relative;
   border: none;
   background-color: white;
 }
 .container .card .face{
-    width: 300px;
-    height: 200px;
+    width: 350px;
+    height: 250px;
 }
 .container .card .face.face1{
     position: relative;
@@ -145,7 +144,7 @@ section h2{
 }
 .container .card .face.face2{ 
     position: relative;
-    background: rgb(225, 215, 215);
+    background: white;
    
     background-position: center;
     display: flex;
@@ -163,6 +162,7 @@ section h2{
     text-align: center;
 }
 .container .card .face.face2 .content p{
+    margin-top: 20px;
     font-family: bembo;
     font-size: 21px;
 }
