--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,7 +19,7 @@ body{
 }
 /* NAVBAR */
 nav{
-    background-color: whitesmoke;
+    background-color: rgb(132, 131, 131);
 }
 #links li a{
     font-size: 15px;
@@ -67,7 +67,7 @@ section h2{
 #conocenos{       
     color: black;
     text-align: center;
-    background-color: white;
+    background-color: rgb(132, 131, 131);
    
 }
 #conocenos img{
@@ -182,7 +182,7 @@ section h2{
 /* FOOTER */
 
 #footer{
-    background-color: white;
+    background-color: rgb(132, 131, 131);
     box-shadow: 0px 0px 25px rgba(191, 166, 166, 0.934);   
 }
 #footer p{
