--- a/css/estilos.css
+++ b/css/estilos.css
@@ -110,8 +110,8 @@ section h2{
     font-size: 45px;
 }
 #logoServices img{
-    width: 150px;
-    height: 150px;
+    width: 125px;
+    height: 120px;
     
 }
 
@@ -205,7 +205,7 @@ section h2{
 }
 hr{
     height: 5px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(238, 235, 235, 0.462);
 }
 /* FOOTER */
 
