adding new navbar with js

--- a/css/estilosImg.css
+++ b/css/estilosImg.css
@@ -21,20 +21,11 @@ body{
    overflow-x: hidden;
 }
 /* NAVBAR */
-header{
-   position:fixed;  
-   left: 0;
-   right: 0;
-   z-index: 1000;
 
-
-}
 nav{
-    background-color: rgba(122, 122, 122, 0);
+    background-color: rgb(122, 122, 122);
 }
-nav.abajo{
-    background-color: rgba(105, 105, 105, 0.593);
-}
+
 #links li a{
     font-size: 15px;
     font-weight: lighter;
@@ -50,9 +41,7 @@ nav.abajo{
 
 
 /* DESTINOS */
-section{
-    position: relative;
-}
+
 section h2{
     text-align:center;
     margin-top: 10px;
