--- a/css/estilos.css
+++ b/css/estilos.css
@@ -54,9 +54,7 @@ nav.abajo{
 
 
 /* DESTINOS */
-section{
-    position: relative;
-}
+
 section h2{
     text-align:center;
     margin-top: 10px;
@@ -65,12 +63,16 @@ section h2{
 .card-group{
     gap: 15px;
     padding: 30px;
+   
+    
     
        
 }
 .card-group .card{
     border: none;  
     background-color: rgb(84, 84, 84);
+  
+    
 }
 .card-group .card:hover{
     box-shadow: 0px 0px 10px black;
@@ -222,13 +224,13 @@ section h2{
     margin-top: 55px;
     font-weight: 400;
     font-family: space;
-    font-size: 15px;
+    font-size: 18px;
 }
 .container .card .face.face2 .content ul li{
     list-style: none;
     font-weight: 400;
-    font-family: space;
-    font-size: 15px;
+    font-family: space; 
+    font-size: 20px;
     text-align: justify;
 }
 hr{
@@ -375,6 +377,9 @@ hr{
         display: flex;
         flex-direction: column;
     }
+    .card-group .card{
+        max-width: 500px;
+    }
     .container{
         display: flex;
         flex-direction: column;
@@ -392,6 +397,14 @@ hr{
 
 }
 @media (min-width: 769px) and (max-width: 1023px){
+    .card-group{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .card-group .card{
+        max-width: 500px;
+    }
     .contact{
         margin-bottom: 20px;
     }
