--- a/css/estilos.css
+++ b/css/estilos.css
@@ -98,7 +98,6 @@ section h2{
     color: black;
     text-align: center;
     background-color: rgb(82, 82, 82);
-   
     
 }
 
@@ -107,6 +106,7 @@ section h2{
  margin-bottom: 25px;
  font-weight: 400;
  font-family: space;
+ 
 
  
 }
@@ -130,7 +130,11 @@ section h2{
     color: black;
 }
 /* LOGO SERVICIOS */
-
+#logoServices{
+    --webkit-box-shadow: 4px -8px 52px -8px rgba(0,0,0,0.65);
+    -moz-box-shadow: 4px -8px 52px -8px rgba(0,0,0,0.65);
+    box-shadow: 4px -8px 52px -8px rgba(0,0,0,0.65);
+}
 
 #logoServices h2{
    
@@ -139,6 +143,7 @@ section h2{
 #logoServices img{
     width: 125px;
     height: 120px;
+    padding-bottom: 20px;
     
 }
 
