--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,13 +15,13 @@
     padding: 0;
     box-sizing: border-box;
     font-family: xbka, sans-serif;
-    color: black;  
+    color: white;  
     
     
 }
 body{
    
-   background-color: rgb(115, 115, 115);
+   background-color: #13130e;
    overflow-x: hidden;
 }
 /* NAVBAR */
@@ -62,15 +62,11 @@ section h2{
 }
 .card-group{
     gap: 15px;
-    padding: 30px;
-   
-    
-    
-       
+    padding: 30px;       
 }
 .card-group .card{
     border: none;  
-    background-color: rgb(84, 84, 84);
+    background-color: #2e2f32;
   
     
 }
@@ -86,7 +82,6 @@ section h2{
     font-size: 20px;
 }
 .card-footer{
-    background-color: rgb(84, 84, 84);
     border: none;
     display: grid;
     place-items: center;
@@ -94,10 +89,10 @@ section h2{
 
 
 /* CONOCENOS */
-#conocenos{       
-    color: black;
+#conocenos{     
+    
     text-align: center;
-    background-color: rgb(82, 82, 82);
+
     
 }
 
@@ -115,14 +110,14 @@ section h2{
     font-size: 45px;
     font-weight: bold;
     margin-top: 15px;
-    color: black;
+    color: white;  
 }
 #conocenos p{
     font-weight: 400;
     font-family: space;
     font-size: 25px;   
     margin-top: 40px;
-    color: black; 
+    color: white;  
 }
 #conocenos a{
     text-decoration: none;
@@ -131,9 +126,7 @@ section h2{
 }
 /* LOGO SERVICIOS */
 #logoServices{
-    --webkit-box-shadow: 4px -8px 52px -8px rgba(0,0,0,0.65);
-    -moz-box-shadow: 4px -8px 52px -8px rgba(0,0,0,0.65);
-    box-shadow: 4px -8px 52px -8px rgba(0,0,0,0.65);
+    background-color: #2e2f32;
 }
 
 #logoServices h2{
@@ -143,13 +136,12 @@ section h2{
 #logoServices img{
     width: 125px;
     height: 120px;
-    padding-bottom: 20px;
     
 }
 
 /* ELEGIRNOS */
 .cardContainer{
-    background-color: rgb(82, 82, 82);
+    background-color: #13130e;
     padding: 20px;  
 }
 .cardContainer h2{
@@ -167,7 +159,7 @@ section h2{
     margin-top: 50px;
     position: relative;
     border: none;
-    background-color: rgb(82, 82, 82);
+    background-color: #13130e;
 }
 .container .card .face{
     width: 350px;
@@ -175,7 +167,7 @@ section h2{
 }
 .container .card .face.face1{
     position: relative;
-    background-color: rgb(84, 84, 84);
+    background-color: #13130e;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -207,7 +199,7 @@ section h2{
 }
 .container .card .face.face2{ 
     position: relative;
-    background: rgba(128, 127, 127, 0.678);
+    background: #2e2f32;
     background-position: center;
     display: flex;
     justify-content: center;
@@ -242,8 +234,8 @@ section h2{
 /* FOOTER */
 
 #footer{
-    background-color: rgb(149, 148, 148);
-    box-shadow: 0px 0px 25px rgba(191, 166, 166, 0.934);   
+    background-color: rgb(82, 82, 82);
+   
 }
 #footer p{
     font-size: 15px;
