--- a/css/estilos.css
+++ b/css/estilos.css
@@ -20,24 +20,33 @@
     
 }
 body{
-   
    background-color: #13130e;
    overflow-x: hidden;
 }
 /* NAVBAR */
-header{
+.header{
    position:fixed;  
    left: 0;
    right: 0;
    z-index: 1000;
-
-
 }
-nav{
+
+#nav{
     background-color: rgba(122, 122, 122, 0);
 }
-nav.abajo{
+#nav.abajo{
     background-color: rgba(105, 105, 105, 0.593);
+}
+#imagesNavBar{
+    background-color: #474747;
+}
+.imagesTitle{
+    font-size: 45px;
+    margin-bottom: 20px;
+    background-image: linear-gradient(to bottom,rgba(33, 33, 33, 0.732), rgba(0, 0, 0, 0.353));   
+    height: 250px;
+    display: grid;
+    place-items: center;
 }
 #links li a{
     font-size: 15px;
@@ -50,8 +59,6 @@ nav.abajo{
 #links li :hover{
     color: red;
 }
-
-
 
 /* DESTINOS */
 
@@ -71,10 +78,11 @@ section h2{
     
 }
 .card-group .card:hover{
-    box-shadow: 0px 0px 10px black;
+    box-shadow: 0px 0px 10px rgb(144, 144, 144);
 }
 .card-img-top{
     height: 300px; 
+    
     
     
 }
@@ -82,6 +90,7 @@ section h2{
     font-size: 20px;
 }
 .card-footer{
+    margin-bottom: 20px;
     border: none;
     display: grid;
     place-items: center;
@@ -106,7 +115,6 @@ section h2{
  
 }
 .conocenosTitulo{
-    
     font-size: 45px;
     font-weight: bold;
     margin-top: 15px;
@@ -116,7 +124,7 @@ section h2{
     font-weight: 400;
     font-family: space;
     font-size: 25px;   
-    margin-top: 40px;
+    margin-top: 25px;
     color: white;  
 }
 #conocenos a{
@@ -134,8 +142,10 @@ section h2{
     font-size: 45px;
 }
 #logoServices img{
-    width: 125px;
+    width: 140px;
     height: 120px;
+    display: grid;
+    place-items: center;
     
 }
 
@@ -227,7 +237,7 @@ section h2{
     list-style: none;
     font-weight: 400;
     font-family: space; 
-    font-size: 20px;
+    font-size: 18px;
     text-align: justify;
 }
 
@@ -278,9 +288,8 @@ section h2{
 .footerFinal{
    display: flex;
    flex-direction: column;
-   justify-content: center;
-   align-items: center;
-   align-content: center;
+   display: grid;
+   place-items: center;
 }
 #diseño{
     font-size: 12px;
@@ -342,20 +351,26 @@ section h2{
        #footer{
         display: flex;
         flex-direction: column;
-        align-items: center;
-        align-content: center;
+        display: grid;
+        place-items: center;
        }
        .contact{
         margin-bottom: 20px;
+        display: grid;
+        place-items: center;
     }
     .redes{
         margin-top: 20px;
         margin-bottom: 20px;
+        display: grid;
+        place-items: center;
     }
    
     #logoServices img{
         width: 150px;
         height: 150px;
+        display: grid;
+        place-items: center;
         
     }
        
